Fix deprecated BASE64Encoder usage and Thread.stop() warning